--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import 'about.css';
 html,
 body,
 div,
@@ -135,7 +134,6 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
   color: black;
   padding: 0.5% 0;
 }
@@ -153,7 +151,6 @@ nav h1 {
 ul {
   display: flex;
   justify-content: flex-end;
-  align-items: baseline;
   list-style-type: none;
   padding-right: 1%;
   width: 40%;
@@ -161,7 +158,6 @@ ul {
 ul a {
   display: flex;
   justify-content: flex-end;
-  align-items: baseline;
   text-decoration: none;
   font-size: 1.6rem;
   color: black;
@@ -218,5 +214,67 @@ ul a {
 @media (max-width: 500px) {
   #landing #quote #button {
     font-size: 1rem;
+  }
+}
+#aboutB {
+  background-image: url('/img/print.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 10%;
+}
+#about {
+  width: 50%;
+  font-size: 7vh;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  background-color: white;
+  margin: 10% 25% 0 25%;
+  padding: 1% 0;
+}
+@media (max-width: 500px) {
+  #about {
+    font-size: 3vh;
+  }
+}
+#aboutUs {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  margin: 0 auto;
+  padding: 0;
+  width: 50%;
+}
+#pictures {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.portraits {
+  width: 30%;
+}
+img {
+  object-fit: contain;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+#text {
+  background-color: white;
+  width: 50%;
+  margin: 0 auto;
+}
+#text p {
+  padding: 3% 1%;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 1.4rem;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  line-height: 150%;
+}
+@media (max-width: 500px) {
+  #text p {
+    font-size: 0.8rem;
   }
 }
